# LibreAir-arm-firmware

./: .gitmodules  CMakeLists.txt  Makefile  build.sh  flash.sh  main.c  mcuconf.h
boardcfg/: board.h  board.mk
src/: cmd.c  cmd.h  dumpcode.c  dumpcode.h  main.c
src/boardcfg/: board.c  board.h  chconf.h  mcuconf.h
src/cmdlet/: free.c  free.h  peek.c  peek.h  ps.c  ps.h
