set(TARGET_TRIPLET arm-none-eabi)
set(STM32_CHIP STM32F103RB)
SET(STM32_MIN_HEAP_SIZE 102400)

CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(libreair)

ENABLE_LANGUAGE(ASM)

#FIND_PACKAGE(ChibiOS COMPONENTS nil hal pal serial REQUIRED)
# For use ChibiOS v16.x.x use this string
FIND_PACKAGE(ChibiOS 16 COMPONENTS rt hal adc i2c pal pwm rtc serial spi st uart memstreams nullstreams shell chprintf syscalls REQUIRED)
#FIND_PACKAGE(gcc_stm32)

#SET(CMAKE_EXE_LINKER_FLAGS "-specs=rdimon.specs -lgcc -lc -lm -lrdimon")

INCLUDE_DIRECTORIES(
    ${ChibiOS_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/src/boardcfg
)

FILE(GLOB_RECURSE PROJECT_SOURCES "src/[a-z0-9A-Z]*.c")

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES} ${ChibiOS_SOURCES})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME}.elf)
